# cresce_cofre

./: README.md  pyproject.toml
cresce_cofre/: main.py
cresce_cofre/logs/: logger.py
cresce_cofre/system/: __init__.py  db_system.py  system.py
cresce_cofre/ui/: excluir_acao.py  main_menu.py  main_menu_bar.py  main_menu_buttons.py  main_ui.py  menu_bar.py  nova_acao.py  view_acoes.py  viewer.py
