[tool.poetry]
name = "cresce-cofre"
version = "0.1.0"
description = ""
authors = ["João <oliveira.joaovtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kivy = "^2.2.1"
peewee = "^3.17.0"
yfinance = "^0.2.33"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
